# jinjagen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: across.yml  build.yml  publish.yml
jinjagen/: __main__.py
tests/: run_tests_with_coverage.sh  test_jinjagen.py
